--- a/ml/model_prototype.ipynb
+++ b/ml/model_prototype.ipynb
@@ -4,7 +4,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prototype space for developing Renforcement Learning Model"
+    "# Prototype space for developing Renforcement Learning Model\n",
+    "Arjun Rajpal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import math\n",
+    "import random\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import namedtuple, deque\n",
+    "from itertools import count\n",
+    "\n",
+    "# set up matplotlib\n",
+    "is_ipython = 'inline' in matplotlib.get_backend()\n",
+    "if is_ipython:\n",
+    "    from IPython import display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Replay Memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Transition = namedtuple('Transition',\n",
+    "                        ('state', 'action', 'next_state', 'reward'))\n",
+    "\n",
+    "\n",
+    "class ReplayMemory(object):\n",
+    "\n",
+    "    def __init__(self, capacity):\n",
+    "        self.memory = deque([], maxlen=capacity)\n",
+    "\n",
+    "    def push(self, *args):\n",
+    "        \"\"\"Save a transition\"\"\"\n",
+    "        self.memory.append(Transition(*args))\n",
+    "\n",
+    "    def sample(self, batch_size):\n",
+    "        return random.sample(self.memory, batch_size)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.memory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DQN(nn.Module):\n",
+    "\n",
+    "    def __init__(self, n_observations, n_actions):\n",
+    "        super(DQN, self).__init__()\n",
+    "        self.layer1 = nn.Linear(n_observations, 128)\n",
+    "        self.layer2 = nn.Linear(128, 128)\n",
+    "        self.layer3 = nn.Linear(128, n_actions)\n",
+    "\n",
+    "    # Called with either one element to determine next action, or a batch\n",
+    "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.layer1(x))\n",
+    "        x = F.relu(self.layer2(x))\n",
+    "        return self.layer3(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 128\n",
+    "GAMMA = 0.99\n",
+    "EPS_START = 0.9\n",
+    "EPS_END = 0.05\n",
+    "EPS_DECAY = 1000\n",
+    "TAU = 0.005\n",
+    "LR = 1e-4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actions/Setting Up Target Net and Policy Nets"
    ]
   },
   {
@@ -12,12 +138,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 0 = up, 1 = down, 2 = stay\n",
+    "actions = [0, 1, 2]\n",
+    "n_actions = len(actions)\n",
+    "\n",
+    "#Setting up replay memory\n",
+    "memory = ReplayMemory(10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_net = DQN(n_observations, n_actions)\n",
+    "target_net = DQN(n_observations, n_actions).to(device)\n",
+    "target_net.load_state_dict(policy_net.state_dict())\n",
+    "\n",
+    "optimizer = optim.AdamW(policy_net.parameters(), lr=LR, amsgrad=True)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
